gitops/workloads/static-apps/workflows/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workflows
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing
  template:
    metadata:
      labels:
        app: landing
    spec:
      containers:
        - name: landing
          image: nooblearn2code/workflows:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
