gitops/workloads/static-apps/workflows/service.yml
apiVersion: v1
kind: Service
metadata:
  name: workflows-svc
spec:
  selector:
    app: workflows
  ports:
    - port: 80
      targetPort: 80
