gitops/workloads/static-apps/workflows/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: workflows-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`workflows.nooblearn2code.com`)
      kind: Rule
      services:
        - name: workflows-svc
          port: 80
